...
                                    <rect key="frame" x="0.0" y="0.0" width="600" height="59"/>
                                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.47218528368794327" colorSpace="calibratedRGB"/>
                                    <constraints>
                                        <constraint firstAttribute="height" constant="58" id="VjP-c1-VAg"/>
                                    </constraints>
                                    <segments>
                                        <segment title="Popularity"/>
                                        <segment title="Top Rated"/>
                                    </segments>
                                    <color key="tintColor" red="0.12941176470588234" green="0.12941176470588234" blue="0.12941176470588234" alpha="1" colorSpace="calibratedRGB"/>
                                    <connections>
                                        <action selector="updateMovieList:" destination="3yf-Eb-358" eventType="valueChanged" id="XaW-NL-zPQ"/>
                                    </connections>
                                </segmentedControl>
...
                        </collectionReusableView>
                        <connections>
                            <outlet property="dataSource" destination="TZl-kc-zn7" id="pae-cE-sjW"/>
                            <outlet property="delegate" destination="TZl-kc-zn7" id="FSN-xQ-di2"/>
                        </connections>
                    </collectionView>
                    <navigationItem key="navigationItem" title="Movies" id="xAs-VH-h05"/>
                    <connections>
                        <outlet property="collectionViewMovies" destination="49H-tp-V4t" id="2Bh-gG-aSv"/>
                    </connections>
                </collectionViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="eeu-5R-teA" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
...
